# Bhaisajyaguru

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.claude/agents/: build-validator.md  code-architect.md  code-simplifier.md  security-reviewer.md  verify-app.md
.claude/commands/: commit-push-pr.md
.devcontainer/: Dockerfile  devcontainer.json
app/routes/: home.py
app/templates/: home.html
backup/: setup.py
backup/app/routes/: payment.py
backup/app/static/css/: style.css
backup/app/templates/: base.html  home.html  payment.html
backup/remedies/: __init__.py  api_v1.py  xiang.py
backup/remedies/templates/blog/: update.html
docs/: claude-code-practices.md  claude-code-setup-progress.md  contacts.html  index.html  scriptures.html  technical-specs.md
docs/css/: style.css
docs/js/: temple.js
docs/scriptures/: great-compassion.html  heart-sutra.html  medicine-buddha.html
documentation/: claude-code-practices.md  claude-code-setup-progress.md  development-process.md  development_plan.md  project_plan.md  technical-specs.md  temple_layout.md
remedies/: __init__.py  auth.py  blog.py  config.py  db.py  donation.py  membership.py  xiang.py
remedies/api/: api_v1.py  home.html  sound.py
remedies/static/: style.css
remedies/templates/: base.html  home.html
remedies/templates/auth/: register.html
remedies/tests/: api_v1.py
