[tool.poetry]
name = "bhaisajyaguru"
version = "0.1.0"
description = "seed in hearts"
authors = ["Zhen Guo <zhen.guo82@hotmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2022.3.4"
Flask = "^2.2.1"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
