[tool.poetry]
name = "remedies"
version = "0.1.0"
description = "seed in hearts"
authors = ["ybbhfdf <ybbhfdf@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2022.3.4"
Flask = "^2.2.1"
Flask-RESTful = "^0.3.9"
setuptools = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
